# Infotecs2020

./: CMakeLists.txt  README.md
Common/: BigNum.cpp  BigNum.h  ThreadLogic.cpp  ThreadLogic.h
FstApp/: handler.cpp
SndApp/: receiver.cpp
